Fix applications main text to fit on small viewport widths

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1308,6 +1308,10 @@ footer a {
     .important-text h2{
         font-size: 200%;
     }
+
+    #applications-text {
+        font-size: 0%;
+    }
 }
 
 @media screen and (max-width: 300px){
